# anjuta

./: AUTHORS  Makefile.am  NEWS  README.md  anjuta.appdata.xml.in  autogen.sh  configure.ac
launcher/: anjuta-launcher.c
libanjuta/: Makefile.am  anjuta-async-task.c  anjuta-async-task.h  anjuta-cell-renderer-diff.c  anjuta-close-button.c  anjuta-command-bar.c  anjuta-convert.c  anjuta-launcher.c  anjuta-launcher.h  anjuta-modeline.c  anjuta-pkg-config-chooser.c  anjuta-plugin-description.c  anjuta-plugin-manager.c  anjuta-plugin-manager.h  anjuta-plugin.h  anjuta-preferences-dialog.c  anjuta-preferences-dialog.h  anjuta-profile-manager.c  anjuta-profile.c  anjuta-profile.h  anjuta-status.c  anjuta-tabber.c  anjuta-tabber.h  anjuta-task.c  anjuta-task.h  anjuta-thread-pool-task.c  anjuta-thread-pool-task.h  anjuta-thread-pool.c  anjuta-thread-pool.h  anjuta-token.c  anjuta-tree-combo.c  anjuta-tree-combo.h  anjuta-utils.c  anjuta-utils.h
libanjuta/tests/: Makefile.am  (+1 more)
pixmaps/: Makefile.am
plugins/git/tests/: Makefile.am  testgit.c
po/: LINGUAS  POTFILES.in  POTFILES.skip  az.po  be@latin.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  hi.po  hr.po  hu.po  hy.po  id.po  it.po  ja.po  kk.po  km.po  kn.po  ko.po  lt.po  lv.po  mai.po  mk.po  (+32 more)
src/: Makefile.am  about.c  action-callbacks.c  action-callbacks.h  anjuta-actions.h  anjuta-app.c  anjuta-application.c  anjuta-menu.ui  anjuta-window.c  anjuta-window.h  main.c  org.gnome.anjuta.gschema.xml.in
(+444 files in other folders)
